# 3D_path_planning

./: README
images/: navigation.mkv
src/: CMakeLists.txt  Kinect  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
